--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -60,6 +60,7 @@ set(TEST_SRCS
   src/Stream/test_parseInt.cpp
   src/Stream/test_readBytes.cpp
   src/Stream/test_readBytesUntil.cpp
+  src/Stream/test_readLine.cpp
   src/Stream/test_readString.cpp
   src/Stream/test_readStringUntil.cpp
   src/Stream/test_setTimeout.cpp
